--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,7 +1,7 @@
 OrganizeImports {
-  groupedImports       = Keep
-  groups               = ["re:javax?\\.", "scala.", "reflow.", "*"]
-  removeUnused         = false
+  groupedImports = Keep
+  groups = ["com.monadial", "re:javax?\\.", "scala.", "reflow.", "*"]
+  removeUnused = false
   importSelectorsOrder = Keep
-  importsOrder         = Keep
+  importsOrder = Keep
 }
