--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,11 +1,13 @@
-runner.dialect = scala3
-version = "3.6.1"
+runner.dialect = Scala36
+version = "3.9.5"
 maxColumn = 120
 
-newlines.source = keep
+newlines {
+  source = keep
+}
 
 rewrite {
-  rules = [Imports]
+  rules = [RedundantBraces, Imports]
   imports.sort = ascii
 }
 
@@ -16,10 +18,10 @@ rewrite.scala3 {
 
 fileOverride {
   "glob:**/build.sbt" {
-    runner.dialect = scala3
+    runner.dialect = sbt1
   }
   "glob:**/project/**" {
-    runner.dialect = scala3
+    runner.dialect = sbt1
   }
 }
 
@@ -44,4 +46,8 @@ docstrings {
 spaces {
   beforeContextBoundColon = Never
   inImportCurlyBraces = true
+}
+
+indent {
+  fewerBraces = "always"
 }
