--- a/modules/system/system-topology/src/main/resources/application.conf
+++ b/modules/system/system-topology/src/main/resources/application.conf
@@ -2,11 +2,21 @@ waygrid.system.topology {
   debug = true
   environment = "local" // "local", "dev", "staging", "prod"
   logLevel = "TRACE"
-  gracefulShutdownTimeout = "10 seconds"
+  gracefulShutdownTimeout = "1 seconds"
   eventStream {
     kafka {
       bootstrapServers = ["127.0.0.1:29092", "127.0.0.1:29094", "127.0.0.1:29096"]
       clientId = "waygrid-origin-http"
+      batch {
+        maxEvents = 100
+        maxDuration = "1 second"
+        parallelism = 8
+        maxParallelBatchConcurrency = 16
+      }
+      producer {
+        poolSize = 32
+      }
+      consumer {}
     }
   }
 }
