--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,7 +1,105 @@
-# include `.js` and `.nix` to keep tyrianapp.js' and flake.nix' Scala versions updated
-updates.fileExtensions = [".scala", ".sbt", ".sbt.shared", ".sc", ".yml", ".js", ".nix"]
+# Scala Steward configuration
+# https://github.com/scala-steward-org/scala-steward/blob/main/docs/repo-specific-configuration.md
 
+# File extensions to check for version updates
+updates.fileExtensions = [".scala", ".sbt", ".sbt.shared", ".sc", ".yml", ".md"]
+
+# How often Scala Steward creates PRs (use with workflow schedule)
+pullRequests.frequency = "@monthly"
+
+# Group dependency updates to reduce PR noise
+pullRequests.grouping = [
+  # Group all Cats ecosystem updates
+  { name = "cats", title = "Cats ecosystem updates", filter = [
+    { group = "org.typelevel", artifact = "cats-*" },
+    { group = "org.typelevel", artifact = "kittens*" }
+  ]},
+
+  # Group all Cats Effect ecosystem updates
+  { name = "cats-effect", title = "Cats Effect updates", filter = [
+    { group = "org.typelevel", artifact = "cats-effect*" }
+  ]},
+
+  # Group all Circe updates
+  { name = "circe", title = "Circe updates", filter = [
+    { group = "io.circe" }
+  ]},
+
+  # Group all http4s updates
+  { name = "http4s", title = "http4s updates", filter = [
+    { group = "org.http4s" }
+  ]},
+
+  # Group all fs2 updates
+  { name = "fs2", title = "fs2 updates", filter = [
+    { group = "co.fs2" },
+    { group = "com.github.fd4s", artifact = "fs2-kafka*" }
+  ]},
+
+  # Group all doobie updates
+  { name = "doobie", title = "Doobie updates", filter = [
+    { group = "org.tpolecat", artifact = "doobie-*" }
+  ]},
+
+  # Group all OpenTelemetry updates
+  { name = "otel", title = "OpenTelemetry updates", filter = [
+    { group = "org.typelevel", artifact = "otel4s-*" },
+    { group = "io.opentelemetry" }
+  ]},
+
+  # Group all Redis updates
+  { name = "redis", title = "Redis4Cats updates", filter = [
+    { group = "dev.profunktor", artifact = "redis4cats-*" }
+  ]},
+
+  # Group all Weaver test updates
+  { name = "weaver", title = "Weaver test updates", filter = [
+    { group = "com.disneystreaming", artifact = "weaver-*" }
+  ]},
+
+  # Group all Monocle updates
+  { name = "monocle", title = "Monocle updates", filter = [
+    { group = "dev.optics" }
+  ]},
+
+  # Group sbt plugins
+  { name = "sbt-plugins", title = "sbt plugin updates", filter = [
+    { group = "org.scalameta", artifact = "sbt-scalafmt" },
+    { group = "ch.epfl.scala", artifact = "sbt-scalafix" },
+    { group = "com.github.sbt" }
+  ]},
+
+  # Minor version updates (less risky)
+  { name = "minor", title = "Minor dependency updates", filter = [
+    { version = "minor" }
+  ]},
+
+  # Patch version updates (lowest risk)
+  { name = "patch", title = "Patch dependency updates", filter = [
+    { version = "patch" }
+  ]}
+]
+
+# Commit message configuration (follows conventional commits)
+commits.message = "build(deps): ${artifactId} ${nextVersion} (was ${currentVersion})"
+
+# Limit updates to avoid overwhelming the team
+updates.limit = 10
+
+# Allow pre-release versions only for specific artifacts
+updates.allowPreReleases = [
+  { groupId = "org.typelevel" },
+  { groupId = "io.circe" }
+]
+
+# Ignore certain updates (kept from original config + additions)
 updates.ignore = [
   { groupId = "org.scalameta", artifactId = "scalafmt-core" },
   { groupId = "org.flywaydb", artifactId = "flyway-core" }
 ]
+
+# Build roots (where to look for build files)
+buildRoots = [ "." ]
+
+# Run scalafmt after upgrading dependencies
+scalafmt.runAfterUpgrading = true
