--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,19 +59,26 @@ jobs:
       - name: Generate module matrix
         id: modules
         run: |
-          # Install yq for YAML parsing
-          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          # Detect architecture and download correct yq binary
+          ARCH=$(uname -m)
+          case $ARCH in
+            x86_64)  YQ_ARCH="amd64" ;;
+            aarch64) YQ_ARCH="arm64" ;;
+            arm64)   YQ_ARCH="arm64" ;;
+            *)       echo "Unsupported architecture: $ARCH"; exit 1 ;;
+          esac
+          sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/latest/download/yq_linux_${YQ_ARCH}"
           sudo chmod +x /usr/local/bin/yq
 
           # Check if specific module was requested
           SPECIFIC_MODULE="${{ github.event.inputs.module }}"
 
           if [[ -n "$SPECIFIC_MODULE" ]]; then
-            # Filter for specific module
-            MATRIX=$(yq -o=json '.modules | map(select(.name == "'"$SPECIFIC_MODULE"'")) | {"include": .}' .github/modules.yml)
+            # Filter for specific module - use jq -c for compact single-line JSON
+            MATRIX=$(yq -o=json '.modules | map(select(.name == "'"$SPECIFIC_MODULE"'")) | {"include": .}' .github/modules.yml | jq -c)
           else
-            # Get all modules
-            MATRIX=$(yq -o=json '.modules | {"include": .}' .github/modules.yml)
+            # Get all modules - use jq -c for compact single-line JSON
+            MATRIX=$(yq -o=json '.modules | {"include": .}' .github/modules.yml | jq -c)
           fi
 
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
@@ -79,48 +86,15 @@ jobs:
           echo "$MATRIX" | jq -r '.include[].name'
 
   # ============================================
-  # Code Quality: Format & Lint Check
+  # Code Quality: Format & Lint Check (per module)
   # ============================================
   lint:
-    name: Lint & Format
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ env.JAVA_VERSION }}
-
-      - name: Setup sbt
-        uses: sbt/setup-sbt@v1
-
-      - name: Cache sbt
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.sbt
-            ~/.ivy2/cache
-            ~/.cache/coursier
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt', 'project/**') }}
-          restore-keys: |
-            ${{ runner.os }}-sbt-
-
-      - name: Check formatting (scalafmt)
-        run: sbt scalafmtCheckAll
-
-      - name: Check linting (scalafix)
-        run: sbt 'scalafixAll --check'
-
-  # ============================================
-  # Compile all modules
-  # ============================================
-  compile:
-    name: Compile
+    name: Lint ${{ matrix.name }}
     runs-on: ubuntu-latest
     needs: [setup]
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.modules) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -145,16 +119,67 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-sbt-
 
-      - name: Compile all modules
+      - name: Check formatting (scalafmt) - ${{ matrix.name }}
         run: |
-          echo "🔨 Compiling with version: ${{ needs.setup.outputs.version }}"
-          sbt compile Test/compile
+          echo "🎨 Checking formatting for: ${{ matrix.name }}"
+          echo "   Version: ${{ needs.setup.outputs.version }}"
+          echo "   Commit: ${{ needs.setup.outputs.sha_short }}"
+          sbt "${{ matrix.name }}/scalafmtCheck" "${{ matrix.name }}/Test/scalafmtCheck"
+
+      - name: Check linting (scalafix) - ${{ matrix.name }}
+        run: |
+          echo "🔍 Checking linting for: ${{ matrix.name }}"
+          sbt "${{ matrix.name }}/scalafix --check" "${{ matrix.name }}/Test/scalafix --check"
+
+  # ============================================
+  # Compile modules (per module)
+  # ============================================
+  compile:
+    name: Compile ${{ matrix.name }}
+    runs-on: ubuntu-latest
+    needs: [setup]
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.modules) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
+
+      - name: Cache sbt
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2/cache
+            ~/.cache/coursier
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt', 'project/**') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt-
+
+      - name: Compile ${{ matrix.name }}
+        run: |
+          echo "🔨 Compiling: ${{ matrix.name }}"
+          echo "   Version: ${{ needs.setup.outputs.version }}"
+          echo "   Commit: ${{ needs.setup.outputs.sha_short }}"
+          echo "   Build Time: ${{ needs.setup.outputs.build_time }}"
+          sbt "${{ matrix.name }}/compile" "${{ matrix.name }}/Test/compile"
 
       - name: Generate build info
         run: |
-          echo "## Build Info" >> $GITHUB_STEP_SUMMARY
+          echo "## Build Info - ${{ matrix.name }}" >> $GITHUB_STEP_SUMMARY
           echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Module | ${{ matrix.name }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Component | ${{ matrix.component }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Version | ${{ needs.setup.outputs.version }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Commit | ${{ needs.setup.outputs.sha_short }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Build Time | ${{ needs.setup.outputs.build_time }} |" >> $GITHUB_STEP_SUMMARY
@@ -199,7 +224,8 @@ jobs:
           echo "🧪 Testing module: ${{ matrix.name }}"
           echo "   Component: ${{ matrix.component }}"
           echo "   Service: ${{ matrix.service }}"
-          echo "   Docker: ${{ matrix.docker }}"
+          echo "   Version: ${{ needs.setup.outputs.version }}"
+          echo "   Commit: ${{ needs.setup.outputs.sha_short }}"
           sbt "${{ matrix.name }}/test"
 
       - name: Upload test results
@@ -210,6 +236,17 @@ jobs:
           path: modules/${{ matrix.path }}/target/test-reports/
           retention-days: 7
           if-no-files-found: ignore
+
+      - name: Generate test summary
+        if: always()
+        run: |
+          echo "## Test Results - ${{ matrix.name }}" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Module | ${{ matrix.name }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Component | ${{ matrix.component }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Version | ${{ needs.setup.outputs.version }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Commit | ${{ needs.setup.outputs.sha_short }} |" >> $GITHUB_STEP_SUMMARY
 
   # ============================================
   # Final status check (for branch protection)
