--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,16 +1,23 @@
 name: Docker Build & Push
 
 on:
-  push:
+  # Trigger after CI workflow completes successfully
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
     branches: [main]
+  # Allow manual triggers and tag releases
+  push:
     tags: ['v*']
-  pull_request:
-    # Run on ALL pull requests (any base branch)
-    # This includes feature-to-feature branch merges
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    inputs:
+      module:
+        description: 'Specific module to build (leave empty for all)'
+        required: false
+        type: string
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.workflow_run.head_branch || github.ref }}
   cancel-in-progress: true
 
 env:
@@ -27,6 +34,11 @@ jobs:
   setup:
     name: Setup
     runs-on: ubuntu-latest
+    # Only run if CI passed (for workflow_run trigger) or for tags/manual triggers
+    if: |
+      github.event_name == 'push' ||
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     outputs:
       matrix: ${{ steps.modules.outputs.matrix }}
       version: ${{ steps.version.outputs.version }}
@@ -34,6 +46,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          # For workflow_run, checkout the commit that triggered CI
+          ref: ${{ github.event.workflow_run.head_sha || github.ref }}
 
       - name: Generate version
         id: version
@@ -83,6 +98,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha || github.ref }}
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -117,7 +134,6 @@ jobs:
           platforms: ${{ env.PLATFORMS }}
 
       - name: Log in to GHCR
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -149,7 +165,7 @@ jobs:
         with:
           context: modules/${{ matrix.path }}/target/docker/stage
           platforms: ${{ env.PLATFORMS }}
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.component }}-${{ matrix.service }}:${{ needs.setup.outputs.version }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.component }}-${{ matrix.service }}:${{ needs.setup.outputs.sha_short }}
@@ -158,18 +174,12 @@ jobs:
             org.opencontainers.image.title=waygrid-${{ matrix.component }}-${{ matrix.service }}
             org.opencontainers.image.description=${{ matrix.description }}
             org.opencontainers.image.version=${{ needs.setup.outputs.version }}
-            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.revision=${{ github.event.workflow_run.head_sha || github.sha }}
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: true
           sbom: true
-
-      - name: PR build info
-        if: github.event_name == 'pull_request'
-        run: |
-          echo "📦 PR multi-arch build completed (not pushed)"
-          echo "   Platforms: ${{ env.PLATFORMS }}"
 
   # ============================================
   # Summary
