--- a/modules/origin/http/src/main/resources/application.conf
+++ b/modules/origin/http/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 waygrid.origin.http {
   debug = true
   environment = "local" // "local", "dev", "staging", "prod"
-  logLevel = "INFO"
+  logLevel = "TRACE"
   gracefulShutdownTimeout = "1 seconds"
   eventStream {
     kafka {
@@ -22,6 +22,10 @@ waygrid.origin.http {
         requestTimeout = "500 milliseconds"
       }
       source {}
+      schemaRegistry {
+        autoRegisterSchemas = true,
+        url = "http://localhost:8081"
+      }
     }
   }
   httpServer {
