--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,66 +132,12 @@ jobs:
           sbt "${{ matrix.name }}/scalafix --check" "${{ matrix.name }}/Test/scalafix --check"
 
   # ============================================
-  # Compile modules (per module)
-  # ============================================
-  compile:
-    name: Compile ${{ matrix.name }}
-    runs-on: ubuntu-latest
-    needs: [setup]
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJson(needs.setup.outputs.modules) }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ env.JAVA_VERSION }}
-
-      - name: Setup sbt
-        uses: sbt/setup-sbt@v1
-
-      - name: Cache sbt
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.sbt
-            ~/.ivy2/cache
-            ~/.cache/coursier
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt', 'project/**') }}
-          restore-keys: |
-            ${{ runner.os }}-sbt-
-
-      - name: Compile ${{ matrix.name }}
-        run: |
-          echo "🔨 Compiling: ${{ matrix.name }}"
-          echo "   Version: ${{ needs.setup.outputs.version }}"
-          echo "   Commit: ${{ needs.setup.outputs.sha_short }}"
-          echo "   Build Time: ${{ needs.setup.outputs.build_time }}"
-          sbt "${{ matrix.name }}/compile" "${{ matrix.name }}/Test/compile"
-
-      - name: Generate build info
-        run: |
-          echo "## Build Info - ${{ matrix.name }}" >> $GITHUB_STEP_SUMMARY
-          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Module | ${{ matrix.name }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Component | ${{ matrix.component }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Version | ${{ needs.setup.outputs.version }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Commit | ${{ needs.setup.outputs.sha_short }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Build Time | ${{ needs.setup.outputs.build_time }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Java | ${{ env.JAVA_VERSION }} |" >> $GITHUB_STEP_SUMMARY
-
-  # ============================================
   # Test with Coverage (matrix)
   # ============================================
   test:
     name: Test ${{ matrix.name }}
     runs-on: ubuntu-latest
-    needs: [setup, compile]
+    needs: [setup]
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.modules) }}
@@ -283,13 +229,12 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [setup, lint, compile, test]
+    needs: [setup, lint, test]
     if: always()
     steps:
       - name: Check all jobs passed
         run: |
           if [[ "${{ needs.lint.result }}" != "success" ]] || \
-             [[ "${{ needs.compile.result }}" != "success" ]] || \
              [[ "${{ needs.test.result }}" != "success" ]]; then
             echo "❌ One or more jobs failed"
             exit 1
@@ -304,7 +249,6 @@ jobs:
           echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| Lint | ✅ Passed |" >> $GITHUB_STEP_SUMMARY
-          echo "| Compile | ✅ Passed |" >> $GITHUB_STEP_SUMMARY
           echo "| Tests & Coverage | ✅ Passed |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Version:** ${{ needs.setup.outputs.version }}" >> $GITHUB_STEP_SUMMARY
