codecov and fixed scalafix

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,3 +1,7 @@
+rules = [
+  OrganizeImports
+]
+
 OrganizeImports {
   groupedImports = Keep
   groups = ["com.monadial", "re:javax?\\.", "scala.", "reflow.", "*"]
