--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: modules/${{ matrix.path }}/target/scala-*/scoverage-report/scoverage.xml
           flags: ${{ matrix.name }}
           name: ${{ matrix.name }}
