--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,11 +1,85 @@
 rules = [
   OrganizeImports
+  RemoveUnused
+  RedundantSyntax
+  LeakingImplicitClassVal
+  NoValInForComprehension
 ]
 
-OrganizeImports {
-  groupedImports = Keep
-  groups = ["com.monadial", "re:javax?\\.", "scala.", "reflow.", "*"]
-  removeUnused = false
-  importSelectorsOrder = Keep
-  importsOrder = Keep
+# =============================================================================
+# RemoveUnused - Remove unused imports, locals, and private members
+# =============================================================================
+# Requires SemanticDB (enabled via: ThisBuild / semanticdbEnabled := true)
+RemoveUnused {
+  imports = true        # Remove unused imports
+  privates = true       # Remove unused private members
+  locals = true         # Remove unused local definitions
+  patternvars = true    # Remove unused pattern variables (case Foo(x, _) if x unused)
 }
+
+# =============================================================================
+# OrganizeImports - Automatically organize and group imports
+# =============================================================================
+OrganizeImports {
+  # Merge imports from the same package into a single import statement
+  # Options: Explode (one per line), Merge (combine), Keep (don't change)
+  groupedImports = Merge
+
+  # Group imports in this order (separated by blank lines)
+  # 1. Project imports (com.monadial)
+  # 2. Java/javax imports
+  # 3. Scala standard library
+  # 4. Everything else (third-party)
+  groups = [
+    "com.monadial.*"
+    "re:javax?\\."
+    "scala."
+    "*"
+  ]
+
+  # Sort selectors within a single import (import foo.{Z, A} -> import foo.{A, Z})
+  importSelectorsOrder = Ascii
+
+  # Sort imports within each group alphabetically
+  importsOrder = Ascii
+
+  # Scala 3: Don't remove unused (semantic rules require SemanticDB - can cause issues)
+  # Enable this only if you have proper SemanticDB setup
+  removeUnused = false
+
+  # Coalesce wildcards - if you import foo.{A, B, _}, simplify to foo._
+  coalesceToWildcardImportThreshold = 5
+
+  # Group blank lines between groups
+  blankLines = Auto
+
+  # Target Scala 3 dialect
+  targetDialect = Scala3
+}
+
+# =============================================================================
+# RedundantSyntax - Remove unnecessary syntax
+# =============================================================================
+# Removes:
+# - Redundant string interpolators: s"literal" -> "literal"
+# - Final modifier on objects: final object Foo -> object Foo
+# - Unnecessary : Unit return types in Scala 3
+RedundantSyntax {
+  # All checks enabled by default
+}
+
+# =============================================================================
+# LeakingImplicitClassVal - Prevent implicit class value leakage
+# =============================================================================
+# Flags: implicit class RichInt(val i: Int)
+# Should be: implicit class RichInt(private val i: Int)
+# The val would be publicly accessible which is usually unintended
+LeakingImplicitClassVal {}
+
+# =============================================================================
+# NoValInForComprehension - Discourage val in for-comprehensions
+# =============================================================================
+# Flags: for { x <- list; val y = x + 1 } yield y
+# Should be: for { x <- list; y = x + 1 } yield y
+# The val keyword is unnecessary and discouraged in Scala 3
+NoValInForComprehension {}
