--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,17 @@ jobs:
           fail_ci_if_error: false
           verbose: true
 
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: modules/${{ matrix.path }}/target/test-reports/*.xml
+          flags: ${{ matrix.name }}
+          name: ${{ matrix.name }}-tests
+          fail_ci_if_error: false
+          verbose: true
+
       - name: Generate test & coverage summary
         if: always()
         run: |
